@@ -26,7 +26,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 .\" IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd July 12, 2010
+.Dd October 31, 2010
 .Dt ATF-TEST-CASE 4
 .Os
 .Sh NAME
@@ -230,7 +230,7 @@ unprivileged user will be supported.
 .It timeout
 Type: integral.
 Optional; defaults to
-.Sq 300 .
+.Sq 30 .
 .Pp
 Specifies the maximum amount of time the test case can run.
 This is particularly useful because some tests can stall either because they
